--- a/archives.html
+++ b/archives.html
@@ -4,15 +4,7 @@ title:            Archives
 ---
 {% include JB/setup %}
 <article id="post-list">
-  <h3>{{ page.title }}<span>(&nbsp;{{ site.posts | size }} posts.&nbsp;)</span></h3>
-  <ul class="posts">
-    {% for post in site.posts %}
-        {% capture month %}
-            <p>wwwww</p>
-        {% endcapture %}
-      <li><span>{{ post.date | date_to_string }}</span>&nbsp;&raquo;&nbsp;<a href="{{ post.url }}" title="{{ post.title }}" alt="bookmark">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+  <h2>{{ page.title }}<span>(&nbsp;{{ site.posts | size }} posts.&nbsp;)</span></h2>
+{% assign posts_collate = site.posts %}
+{% include JB/posts_collate %}
 </article>
-
-
