--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ titlef:           index
 ---
 <header id="prefile">
     <h2>I'm Vinntoe.</h2>
-    <p>Phosphorus,Iodine 2& Zinc.<g:plusone size="small"></g:plusone></p>
+    <p>Individual blog of Vinntoe<g:plusone size="small"></g:plusone></p>
 </header>
 <article id="post-list">
     <h3>My GitHub Posts List</h3>
