--- a/tags.html
+++ b/tags.html
@@ -5,13 +5,13 @@ header: Posts By Tag
 group: navigation
 ---
 {% include JB/setup %}
-
+<h1>Tags</h1>
 <ul class="tag_box inline">
   {% assign tags_list = site.tags %}  
   {% include JB/tags_list %}
 </ul>
 
-
+<div class="tagpost">
 {% for tag in site.tags %} 
   <h2 id="{{ tag[0] }}-ref">{{ tag[0] }}</h2>
   <ul>
@@ -19,3 +19,4 @@ group: navigation
     {% include JB/pages_list %}
   </ul>
 {% endfor %}
+</div>
