--- a/archives.html
+++ b/archives.html
@@ -1,6 +1,7 @@
 ---
-layout:           default
-title:            Archives
+layout: page
+title: Archives
+group: navigation
 ---
 {% include JB/setup %}
 <article id="post-list">
