update jsload and others

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
-layout:           default
-titlef:           index
+layout: default
+title: index
+is_index: true
 ---
 <header id="prefile">
     <h2>I'm Vinntoe.</h2>
