--- a/archives.html
+++ b/archives.html
@@ -1,11 +1,6 @@
 ---
-layout: page
+layout: archive
 title: Archives
 group: navigation
 ---
 {% include JB/setup %}
-<article id="post-list">
-  <h2>{{ page.title }}<span>(&nbsp;{{ site.posts | size }} posts.&nbsp;)</span></h2>
-{% assign posts_collate = site.posts %}
-{% include JB/posts_collate %}
-</article>
