--- a/links.html
+++ b/links.html
@@ -1,6 +1,7 @@
 ---
 title: Links
 layout: links
+pid: 2013051202
 comment: true
 group: navigation
 ---
@@ -12,7 +13,7 @@ group: navigation
     <li><a target="_blank" title="奇遇" href="http://www.qiyuuu.com/">奇遇</a></li>
     <li><a target="_blank" title="动点创想" href="http://www.sprityaoyao.org/">动点创想</a></li>
     <li><a target="_blank" title="设极" href="http://about-inter.net/">设极</a></li>
-    <li><a target="_blank" title="听海博客" href="http://tinghaige.com/">听海博客</a></li>
+    <li><a target="_blank" title="听海博客" href="http://www.tinghaige.com/">听海博客</a></li>
     <li><a target="_blank" title="DH 博客" href="http://dhblog.org/">DH 博客</a></li>
     <li><a target="_blank" title="TUHAIHE" href="http://www.bentutu.com/">TUHAIHE</a></li>
     <li><a target="_blank" title="Leyar" href="http://www.ileyar.com/">Leyar</a></li>
