--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <p>if you are finding http://isayme.com 's some website</p>
     <p>Maybe the link you want is <a id="link" href=""></a></p>
 <script type="text/javascript">
-    var link = window.location.href;
+    var link = window.location.href;//test
     //alert(link);
     link = link.replace(/^(http:\/(?:\/[^\/]*){4}).*$/,'$1.html');
     var a = document.getElementById('link');
