update README and links

--- a/links.html
+++ b/links.html
@@ -5,7 +5,7 @@ pid: 2013051202
 comment: true
 group: navigation
 ---
-<p>排名不分先后,如果忘记添加您的链接,请及时告知</p>
+<p>朋友链接,排名不分先后</p>
 <ul>
     <li><a target="_blank" title="IM路人" href="http://imluren.com/">IM路人</a></li>
     <li><a target="_blank" title="红尘客栈" href="http://japhia.info/">红尘客栈</a></li>
