--- a/links.html
+++ b/links.html
@@ -6,6 +6,7 @@ group: navigation
 ---
 <p>朋友链接,排名不分先后</p>
 <ul>
+    <li><a target="_blank" title="清泉古雾" href="http://jser.io/">清泉古雾</a></li>
     <li><a target="_blank" title="IM路人" href="http://imluren.com/">IM路人</a></li>
     <li><a target="_blank" title="红尘客栈" href="http://japhia.info/">红尘客栈</a></li>
     <li><a target="_blank" title="自由帽博客" href="http://www.librehat.info/">自由帽博客</a></li>
