--- a/links.html
+++ b/links.html
@@ -4,7 +4,7 @@ layout: links
 pid: 2013051202
 group: navigation
 ---
-<p>朋友链接,排名不分先后</p>
+<p>排名不分先后. 非友情链接, 只作书签之用. 申请友链的请<strong>不要联系我</strong>.</p>
 <ul>
     <li><a target="_blank" title="清泉古雾" href="http://jser.io/">清泉古雾</a></li>
     <li><a target="_blank" title="IM路人" href="http://imluren.com/">IM路人</a></li>
