--- a/links.html
+++ b/links.html
@@ -9,7 +9,7 @@ group: navigation
     <li><a target="_blank" title="清泉古雾" href="http://jser.io/">清泉古雾</a></li>
     <li><a target="_blank" title="IM路人" href="http://imluren.com/">IM路人</a></li>
     <li><a target="_blank" title="红尘客栈" href="http://japhia.info/">红尘客栈</a></li>
-    <li><a target="_blank" title="自由帽博客" href="http://www.librehat.info/">自由帽博客</a></li>
+    <li><a target="_blank" title="自由帽博客" href="http://www.librehat.com/">自由帽博客</a></li>
     <li><a target="_blank" title="奇遇" href="http://www.qiyuuu.com/">奇遇</a></li>
     <li><a target="_blank" title="动点创想" href="http://www.sprityaoyao.org/">动点创想</a></li>
     <li><a target="_blank" title="设极" href="http://about-inter.net/">设极</a></li>
