--- a/links.html
+++ b/links.html
@@ -4,12 +4,12 @@ layout: links
 pid: 2013051202
 group: navigation
 ---
-<p>排名不分先后. 非友情链接, 只作书签之用. 申请友链的请<strong>不要联系我</strong>.</p>
+<p>排名不分先后. 新申请友链的请<strong>不要联系我</strong>.</p>
 <ul>
     <li><a target="_blank" title="清泉古雾" href="http://jser.io/">清泉古雾</a></li>
     <li><a target="_blank" title="IM路人" href="http://imluren.com/">IM路人</a></li>
     <li><a target="_blank" title="红尘客栈" href="http://japhia.info/">红尘客栈</a></li>
-    <li><a target="_blank" title="自由帽博客" href="http://www.librehat.com/">自由帽博客</a></li>
+    <li><a target="_blank" title="Librehat's Blog" href="http://www.librehat.com/">Librehat's Blog</a></li>
     <li><a target="_blank" title="奇遇" href="http://www.qiyuuu.com/">奇遇</a></li>
     <li><a target="_blank" title="动点创想" href="http://www.sprityaoyao.org/">动点创想</a></li>
     <li><a target="_blank" title="设极" href="http://about-inter.net/">设极</a></li>
